@@ -306,11 +306,11 @@ DECL|field|TEST_ROOT_DIR
 specifier|private
 specifier|static
 specifier|final
-name|String
+name|Path
 name|TEST_ROOT_DIR
 init|=
 operator|new
-name|File
+name|Path
 argument_list|(
 name|System
 operator|.
@@ -318,49 +318,50 @@ name|getProperty
 argument_list|(
 literal|"test.build.data"
 argument_list|,
-literal|"/tmp"
-argument_list|)
-argument_list|)
+name|System
 operator|.
-name|toURI
-argument_list|()
-operator|.
-name|toString
-argument_list|()
-operator|.
-name|replace
+name|getProperty
 argument_list|(
-literal|' '
+literal|"java.io.tmpdir"
+argument_list|)
+argument_list|)
 argument_list|,
-literal|'+'
+name|TestClientDistributedCacheManager
+operator|.
+name|class
+operator|.
+name|getSimpleName
+argument_list|()
 argument_list|)
 decl_stmt|;
-DECL|field|TEST_VISIBILITY_DIR
+DECL|field|TEST_VISIBILITY_PARENT_DIR
 specifier|private
 specifier|static
 specifier|final
-name|String
-name|TEST_VISIBILITY_DIR
+name|Path
+name|TEST_VISIBILITY_PARENT_DIR
 init|=
 operator|new
-name|File
+name|Path
 argument_list|(
 name|TEST_ROOT_DIR
 argument_list|,
-literal|"TestCacheVisibility"
+literal|"TestCacheVisibility_Parent"
 argument_list|)
-operator|.
-name|toURI
-argument_list|()
-operator|.
-name|toString
-argument_list|()
-operator|.
-name|replace
+decl_stmt|;
+DECL|field|TEST_VISIBILITY_CHILD_DIR
+specifier|private
+specifier|static
+specifier|final
+name|Path
+name|TEST_VISIBILITY_CHILD_DIR
+init|=
+operator|new
+name|Path
 argument_list|(
-literal|' '
+name|TEST_VISIBILITY_PARENT_DIR
 argument_list|,
-literal|'+'
+literal|"TestCacheVisibility_Child"
 argument_list|)
 decl_stmt|;
 DECL|field|fs
@@ -438,7 +439,7 @@ operator|=
 operator|new
 name|Path
 argument_list|(
-name|TEST_VISIBILITY_DIR
+name|TEST_VISIBILITY_CHILD_DIR
 argument_list|,
 literal|"thirdCachefile"
 argument_list|)
@@ -477,14 +478,13 @@ name|IOException
 block|{
 if|if
 condition|(
-operator|!
 name|fs
 operator|.
 name|delete
 argument_list|(
-name|firstCacheFile
+name|TEST_ROOT_DIR
 argument_list|,
-literal|false
+literal|true
 argument_list|)
 condition|)
 block|{
@@ -492,49 +492,9 @@ name|LOG
 operator|.
 name|warn
 argument_list|(
-literal|"Failed to delete firstcachefile"
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-operator|!
-name|fs
-operator|.
-name|delete
-argument_list|(
-name|secondCacheFile
-argument_list|,
-literal|false
-argument_list|)
-condition|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-literal|"Failed to delete secondcachefile"
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-operator|!
-name|fs
-operator|.
-name|delete
-argument_list|(
-name|thirdCacheFile
-argument_list|,
-literal|false
-argument_list|)
-condition|)
-block|{
-name|LOG
-operator|.
-name|warn
-argument_list|(
-literal|"Failed to delete thirdCachefile"
+literal|"Failed to delete test root dir and its content under "
+operator|+
+name|TEST_ROOT_DIR
 argument_list|)
 expr_stmt|;
 block|}
@@ -707,27 +667,18 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|Path
-name|workingdir
-init|=
-operator|new
-name|Path
-argument_list|(
-name|TEST_VISIBILITY_DIR
-argument_list|)
-decl_stmt|;
 name|fs
 operator|.
 name|setWorkingDirectory
 argument_list|(
-name|workingdir
+name|TEST_VISIBILITY_CHILD_DIR
 argument_list|)
 expr_stmt|;
 name|fs
 operator|.
 name|setPermission
 argument_list|(
-name|workingdir
+name|TEST_VISIBILITY_CHILD_DIR
 argument_list|,
 operator|new
 name|FsPermission
@@ -743,11 +694,7 @@ name|fs
 operator|.
 name|setPermission
 argument_list|(
-operator|new
-name|Path
-argument_list|(
-name|TEST_ROOT_DIR
-argument_list|)
+name|TEST_VISIBILITY_PARENT_DIR
 argument_list|,
 operator|new
 name|FsPermission
